[gd_scene load_steps=11 format=3 uid="uid://dj6uthe21hwao"]

[ext_resource type="Script" path="res://scenes/3dMechanics/Character/character.gd" id="1_0tijo"]
[ext_resource type="PackedScene" uid="uid://n5v7yi3o4k2w" path="res://scenes/3dMechanics/hitbox/hit_box.tscn" id="2_b2uxx"]
[ext_resource type="Texture2D" uid="uid://iw0irwhhtjtf" path="res://resources/3d/Carlos Kano/UV Teste.png" id="3_6ct61"]
[ext_resource type="Texture2D" uid="uid://dhllupowil28n" path="res://scenes/3dMechanics/Character/UV Teste.png" id="4_0ug68"]
[ext_resource type="ArrayMesh" uid="uid://dw6ksev0rcwuu" path="res://resources/3d/Carlos Kano/Carlos Kano 3D.obj" id="4_16ieu"]
[ext_resource type="AudioStream" uid="uid://d7i4xqf8poy3" path="res://resources/sound/soundeffects/hitsound_raquete.wav" id="5_olopx"]
[ext_resource type="PackedScene" uid="uid://ky68rieffrm" path="res://scenes/3dMechanics/Character/carlos_kano_3d.tscn" id="7_fuuix"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_qm0ib"]
albedo_texture = ExtResource("3_6ct61")
albedo_texture_force_srgb = true
metallic_specular = 0.0
roughness_texture_channel = 4
emission_enabled = true
emission_energy_multiplier = 0.5
emission_texture = ExtResource("4_0ug68")
normal_enabled = true
normal_scale = 11.79
rim_enabled = true
rim = 0.15
rim_tint = 0.0
clearcoat = 0.42
clearcoat_roughness = 1.0
subsurf_scatter_skin_mode = true

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_abotk"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_lky25"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1

[node name="Character" type="CharacterBody3D" groups=["Jogadores"]]
motion_mode = 1
script = ExtResource("1_0tijo")

[node name="HitBox" parent="." instance=ExtResource("2_b2uxx")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.28831, 0.319006, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="." groups=["Jogadores"]]
transform = Transform3D(-1.31134e-07, 0, 3, 0, 3, 0, -3, 0, -1.31134e-07, 0, -3.40931, 0)
visible = false
material_override = SubResource("StandardMaterial3D_qm0ib")
mesh = ExtResource("4_16ieu")

[node name="Can_dash" type="Timer" parent="."]
one_shot = true

[node name="Dashing" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="Can_hit" type="Timer" parent="."]
wait_time = 0.7
one_shot = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_abotk")
disabled = true

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_lky25")

[node name="hitsound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_olopx")
volume_db = 10.0
pitch_scale = 0.7

[node name="Carlos Kano 3D2" parent="." instance=ExtResource("7_fuuix")]
transform = Transform3D(-1.31134e-07, 0, 3, 0, 3, 0, -3, 0, -1.31134e-07, 0, -3.409, 0)

[connection signal="timeout" from="Can_dash" to="." method="_on_can_dash_timeout"]
[connection signal="timeout" from="Dashing" to="." method="_on_dashing_timeout"]
[connection signal="timeout" from="Can_hit" to="." method="_on_can_hit_timeout"]
